--- a/views/secure.pug
+++ b/views/secure.pug
@@ -14,7 +14,7 @@ block content
   button(type='button' class='indexbtn' onclick="location.href='/myAd'") MY AD
   br
   br
-  button(type='button' class='indexbtn' onclick="location.href='/login'") LOGOUT
+  button(type='button' class='indexbtn' onclick="location.href='/logout'") LOGOUT
   br
   br
  div(class='midpage')
