--- a/views/login.pug
+++ b/views/login.pug
@@ -3,12 +3,13 @@ extends layout
 block content
 	div(class='midpage')
 		h1 Login
-		form(method='post')
-			p
-				label(for='username') <em>Username:</em> 
-				input(type='text', name='username')
-			p
-				label(for='password') <em>Password:</em>  
-				input(type='password', name='password')
-			input(type='submit')
-		br
+		div(class='midPageForms')
+			form(method='post')
+				p
+					label(for='username') <em>Username:</em> 
+					input(type='text', name='username')
+				p
+					label(for='password') <em>Password:</em>  
+					input(type='password', name='password')
+				input(type='submit')
+			br
