--- a/views/search.pug
+++ b/views/search.pug
@@ -4,9 +4,10 @@ block content
  div(class='midpage')
   input(type="text" id='searchInput' name="search" placeholder="Search..")
   button(class='indexbtn' onclick='Search()') Search
-  div(id='searchContent')
+  div(class='midPageForms')
    - var i=0
    form(method='post')
     while i < 5
-     p(id='pSearch'+i++) 
-    input(type='submit' id='submitButt' value='Submit')
+     p(id='pSearch'+i++)
+    p(id='formSub') 	 
+    p(id='butSub') 
