--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,57 +8,131 @@ a {
 
 em{
 	
-	color: red;
+	color: white;
+	
+}
+div.myad{
+	
+	padding: 20px;
+	border-radius: 30px;
+}
+
+div.form-group{
+	
+	margin-left: 30px;
+	margin-right: 30px;
+	padding: 20px;
+	
+}
+
+input.inputBox{
+	
+	background: none;
+	outline: none;
+	border: 0px;
+	border-bottom: 1px solid black;
+	color: white;
+	
+}
+
+div.midPageForms{
+	
+	margin-bottom: 200px;
+	margin-right: 300px;
+	margin-left: 300px;
+	margin-top: 20px;
+	padding: 20px;
+	border-radius: 30px;
+	background-color: rgba(32,32,32,0.6);
+
+}
+
+div.searchAd{
+	
+	margin:30px;
+	padding:30px;
 }
 
 div.midpage{
 	
 	text-align: center;
 	padding: 20px;
-	
+	margin-bottom: 20px;
+	margin-top: 20px;
+    background-image: url("../images/wbslika.png");
+	border-radius: 30px;
+	color:white;
 }
 
 h1{
 	
-	color: red;
+	color: white;
 	
 }
 
 button.indexbtn{
 	
-	background-color: red;
-	border-radius: 30px;
+	background-color: LightGray;
 	font-family: Comic Sans MS;
 	font-size: 18px;
+	color: black;
+	border: none;
+	box-shadow: 5px 5px;
+	outline: none;
+}
+
+button#searchButt{
+	
+	background-color: LightGray;
+	font-family: Comic Sans MS;
+	font-size: 18px;
+	color: black;
+	border: none;
+    padding-bottom: 2.3px;
+    padding-top: 0.2px;
+	outline:none;
 	
 }
 
 input[type=submit]{
 	
-	background-color: red;
-	border-radius: 30px;
+	background-color: light gray;
+	border: none;
 	font-family: Comic Sans MS;
-	font-size: 18px;	
+	font-size: 18px;
+	color: black;
+	outline:none;
 }
 
 button.indexbtn:hover{
 	
-	background-color: black;
-	color: white;
+	background-color: gray;
+	cursor: pointer;
+}
 
+button#searchButt:hover{
+	
+	background-color: gray;
+	cursor: pointer;
+}
+
+input[type=radio]:hover{
+	
+	cursor: pointer;
+	
 }
 
 input[type=submit]:hover{
 	
-	background-color: black;
-	color: white;
+	background-color: gray;
+	cursor: pointer;
 	
 }
 
 
 html{
 	
-	background: linear-gradient(to bottom right, white,yellow, red);
+	background: radial-gradient(circle, white,gray,black );
 	font-family: Comic Sans MS;
 	font-size: 18px;
 }
@@ -72,11 +146,12 @@ div.midpage{
 div.title{
 	
 	text-align: center;
-	color: black;
+	color: white;
 	font-family: Comic Sans MS;
 	font-weight: bold;
 	font-size: 40px;
-	text-shadow: 2px 2px gray;
+	text-shadow: 2px 2px red;
+	
 	
 }
 
@@ -100,15 +175,9 @@ img#profilepicture{
 	width:100%;
 	border: 1px solid;
 	border-color: black;
+	max-width: 100%;
+    max-height: 100%;
 
-}
-
-div.infoside{
-	
-	text-align:center;
-	float:left;
-	padding: 15px;
-	
 }
 
 div.menubar{
@@ -119,6 +188,7 @@ div.menubar{
 }
 
 ul.menubar {
+	
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -141,6 +211,29 @@ li a {
 li.menubar a:hover {
     color: red;
 	font-weight: bold;
+}
+
+div.infoside{
+	
+	background-color: rgb(179, 0, 0);
+	border-radius: 30px;
+	margin-bottom: 20px;
+	text-align:center;
+	float:left;
+	padding: 15px;
+}
+
+div.searchTab{
+
+	text-align: center;
+	display: inline;
+
+}
+
+input#searchInput{
+	
+	font-size: 18px;
+
 }
 
 header{
