--- a/views/secure.pug
+++ b/views/secure.pug
@@ -4,10 +4,7 @@ block content
  br
  div(class="infoside")
   p <em>Username:</em> #{name}
-  button(type='button' class='indexbtn' onclick="location.href='/secure/newAd'") NEW AD
-  br
-  br
-  button(type='button' class='indexbtn' onclick="location.href='/secure/myAd'") MY AD
+  button(type='button' class='indexbtn' onclick="location.href='/ads'") AD
   br
   br
   button(type='button' class='indexbtn' onclick="location.href='/logout'") LOGOUT
