added getting newAd page and creating ad

--- a/views/newAd.pug
+++ b/views/newAd.pug
@@ -4,7 +4,7 @@ block content
  div(class='midpage')
   h1 New Ad
   div(class='midPageForms')
-   form(method='post' action='/secure')
+   form(method='post' action='/ads')
     p
      label(for='ad') <em>Name:</em> 
      input(type='text', class='inputBox', name='name')
