--- a/views/secure.pug
+++ b/views/secure.pug
@@ -7,6 +7,9 @@ block content
   button(type='button' class='indexbtn' onclick="location.href='/ads'") AD
   br
   br
+  button(type='button' class='indexbtn' onclick="location.href='ads/newAd'") CREATE AD
+  br
+  br
   button(type='button' class='indexbtn' onclick="location.href='/logout'") LOGOUT
   br
   br
