--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -66,7 +66,7 @@ div.midpage{
 
 h1{
 	
-	color: lightGray;
+	color: black;
 	
 }
 
@@ -139,6 +139,7 @@ html{
 
 div.midpage{
 	
+	background: rgba(255, 0, 0, 0.589);
 	text-align: center;
 
 }
@@ -224,6 +225,7 @@ div.infoside{
 	background-color: rgb(179, 0, 0);
 	border-radius: 30px;
 	margin-bottom: 20px;
+	border-color: black;
 	text-align:center;
 	float:left;
 	padding: 15px;
