--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,37 +1,27 @@
-body {
-  padding: 50px;
-}
-
-a {
-  color: #00B7FF;
-}
-
-em{
-	
-	color: white;
-	
-}
 div.myad{
 	
 	padding: 20px;
 	border-radius: 30px;
 }
-
+body {
+	background-image: url('/images/background.jpg')
+}
+hr{
+	height: 15px;
+	background-color: rgba(0, 0, 0,0.3);
+}
+img#icon{
+	size:20px;
+	width: 20px;
+}
+p#iconText{
+	transform: rotate(320deg);
+}
 div.form-group{
 	
 	margin-left: 30px;
 	margin-right: 30px;
 	padding: 20px;
-	
-}
-
-input.inputBox{
-	
-	background: none;
-	outline: none;
-	border: 0px;
-	border-bottom: 1px solid black;
-	color: white;
 	
 }
 
@@ -42,9 +32,10 @@ div.midPageForms{
 	margin-left: 300px;
 	margin-top: 20px;
 	padding: 20px;
-	border-radius: 30px;
-	background-color: rgba(32,32,32,0.6);
 
+}
+div#divWithData{
+	background-color: rgba(0, 217, 255, 0);
 }
 
 div.searchAd{
@@ -53,52 +44,34 @@ div.searchAd{
 	padding:30px;
 }
 
-div.midpage{
-	
-	text-align: center;
-	padding: 20px;
-	margin-bottom: 20px;
-	margin-top: 20px;
-    background-image: url("../images/wbslika.png");
-	border-radius: 30px;
-	color:white;
-}
-
-h1{
-	
-	color: black;
-	
-}
-
 button.indexbtn{
 	
-	background-color: LightGray;
-	font-family: Comic Sans MS;
+	background-color: rgba(58, 128, 0,0);
+	font-family: Serif;
 	font-size: 18px;
 	color: black;
 	border: none;
-	box-shadow: 5px 5px;
 	outline: none;
 }
 
 button#searchButt{
 	
-	background-color: LightGray;
-	font-family: Comic Sans MS;
+	font-family: Serif;
 	font-size: 18px;
 	color: black;
 	border: none;
     padding-bottom: 2.3px;
     padding-top: 0.2px;
 	outline:none;
+	background-color: rgba(0,0,0,0);
 	
 }
 
 input[type=submit]{
 	
-	background-color: light gray;
+	background-color: rgba(0,0,0,0);
 	border: none;
-	font-family: Comic Sans MS;
+	font-family: Serif;
 	font-size: 18px;
 	color: black;
 	outline:none;
@@ -106,14 +79,13 @@ input[type=submit]{
 
 button.indexbtn:hover{
 	
-	background-color: gray;
 	cursor: pointer;
 }
 
 button#searchButt:hover{
 	
-	background-color: gray;
 	cursor: pointer;
+
 }
 
 input[type=radio]:hover{
@@ -124,50 +96,35 @@ input[type=radio]:hover{
 
 input[type=submit]:hover{
 	
-	background-color: gray;
 	cursor: pointer;
 	
 }
 
 
 html{
-	
-	background: radial-gradient(circle, white,gray,black );
-	font-family: Comic Sans MS;
-	font-size: 18px;
+	width: 100%;
+	height: 100%;
+	font-family: Serif;
+	font-size: 24px;
 }
 
 div.midpage{
 	
-	background: rgba(255, 0, 0, 0.589);
+	margin-left: 150px;
 	text-align: center;
+	padding: 20px;
+	margin-bottom: 20px;
+	margin-top: 20px;
+	color:black;
 
-}
-
-div.title{
-	
-	text-align: center;
-	color: white;
-	font-family: Comic Sans MS;
-	font-weight: bold;
-	font-size: 40px;
-	text-shadow: 2px 2px red;
-	
-	
 }
 
 header, footer {
     padding: 1em;
-    color: white;
-    background-color: black;
+    color: black;
     clear: left;
-    text-align: center;
-}
-
-header{
-	
-	background-image: url('../images/headerpicture.png');
-	background-size: 100% 170%;
+	text-align: center;
+	display: block;
 }
 
 div.profilepic{
@@ -187,13 +144,6 @@ img#profilepicture{
 
 }
 
-div.menubar{
-	
-	border-bottom-right-radius: 30px;
-	border-bottom-left-radius: 30px;
-	background-color: black;
-}
-
 ul.menubar {
 	
     list-style-type: none;
@@ -204,55 +154,51 @@ ul.menubar {
 }
 
 li.menubar {
-    float: left;
+    float: right;
 }
 
 li a {
-    display: block;
-    color: white;
+    color: black;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
 
 li.menubar a:hover {
-    color: red;
 	font-weight: bold;
+}
+p#username {
+	font: 400 50px/1.5 'Pacifico', Helvetica, sans-serif;
+	text-shadow: 3px 3px 0px rgba(0,0,0,0.1), 7px 7px 0px rgba(0,0,0,0.05);
 }
 
 div.infoside{
-	
-	background-color: rgb(179, 0, 0);
-	border-radius: 30px;
 	margin-bottom: 20px;
-	border-color: black;
 	text-align:center;
 	float:left;
 	padding: 15px;
+	color: black;
+	font-size: 24px;
 }
 
 div.searchTab{
-
+	margin-right:30px;
+	margin-bottom: 5px;
 	text-align: center;
-	display: inline;
-
 }
 
-input#searchInput{
-	
-	font-size: 18px;
-
+input{
+	border: none;
+	border-bottom: 1px solid black;
+	font-size: 14px;
+	width: 130px;
+	text-align: left;
+	background:none;
+	color: black;
 }
-
-header{
-	
-	border-top-right-radius: 30px;
-	border-top-left-radius: 30px;
-}
-
-footer{
-	
-	border-radius: 30px;
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: black;
+    opacity: 1; /* Firefox */
 }
 
 input#DescriptionText{
