--- a/views/search.pug
+++ b/views/search.pug
@@ -1,14 +1,29 @@
 extends layout
 
 block content
+ br
+ div(class="infoside")
+  p(id='username') #{name}
+  button(type='button' class='indexbtn' onclick="location.href='/ads/myAd'") MY AD
+  br
+  br
+  button(type='button' class='indexbtn' onclick="location.href='/ads/newAd'") CREATE AD
+  br
+  br
+  button(type='button' class='indexbtn' onclick="location.href='/logout'")
+   i(class='fas fa-sign-out-alt')
+  br
+  br
  div(class='midpage')
   div(class="searchTab")
+   button(id='searchButt' onclick='Search()')
+    i(class='fab fa-sistrix')
    input(type="text" id='searchInput' name="search" placeholder="Search..")
-   button(id='searchButt' onclick='Search()') Search
-  div(class='midPageForms')
+  div(id='divWithData' class='midPageForms')
+   hr
    - var i=0
-   form(method='post')
     while i < 5
-     p(id='pSearch'+i++)
-    p(id='formSub') 	 
-    p(id='butSub') 
+     form(id = 'form'+i method='post' action= '/?')
+      p(id='pSearch'+i)
+      p(id='formSub'+i) 	 
+      p(id='butSub'+i++) 
