--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,7 @@
 doctype html
 html
  head
-  title HeartBid
+  title GreenRabbit
   script(type='text/javascript' src='/javascripts/CloseMyAd.js')
   script(type='text/javascript' src='/javascripts/searchAds.js')
   script(type='text/javascript' src='/javascripts/socket.io-client/dist/socket.io.js')
@@ -21,7 +21,7 @@ html
        i(class='fa fa-home')
      li(class='menubar' style='float:left')
        div(id='officialIcon')
-        p(id='iconText') BidDon
+        p(id='iconText') GreenRabbit
          img(id='icon' src='/images/bell.png')
   block content
 footer Copyright &copy; Roko
