--- a/views/search.pug
+++ b/views/search.pug
@@ -4,6 +4,8 @@ block content
  br
  div(class="infoside")
   p(id='username') #{name}
+  p(id='account') Account: #{account} 
+   i(class="fas fa-address-card")
   button(type='button' class='indexbtn' onclick="location.href='/ads/myAd'") MY AD
   br
   br
@@ -18,12 +20,12 @@ block content
   div(class="searchTab")
    button(id='searchButt' onclick='Search()')
     i(class='fab fa-sistrix')
-   input(type="text" id='searchInput' name="search" placeholder="Search..")
+   input(type="text" id='searchInput' name="search" placeholder="Search.." autocomplete='off')
   div(id='divWithData' class='midPageForms')
    hr
    - var i=0
     while i < 5
-     form(id = 'form'+i method='post' action= '/?')
+     form(id = 'form'+i method='post' action= '/?' autocomplete='off')
       p(id='pSearch'+i)
       p(id='formSub'+i) 	 
       p(id='butSub'+i++) 
