--- a/views/secure.pug
+++ b/views/secure.pug
@@ -4,6 +4,8 @@ block content
  br
  div(class="infoside")
   p(id='username') #{name}
+  p(id='account') Account: #{account} 
+   i(class="fas fa-address-card")
   button(type='button' class='indexbtn' onclick="location.href='/ads/myAd'") MY AD
   br
   br
