WIP added sending message,getting inboks,searching users/ads Next step deleting messages,see users add after search

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,9 +3,7 @@ extends layout
 block content
  div(class='title')
   p #{title}
- div(class="infoside")
-  img(id='fesb' src='/images/fesb.png')
- div(class='midpage')
+ div(class='indexMidpage')
   form(method='post' autocomplete='off')
    p
     label(for='username') Username: 
