--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,7 +4,9 @@ html
   title GreenRabbit
   script(type='text/javascript' src='/javascripts/CloseMyAd.js')
   script(type='text/javascript' src='/javascripts/searchAds.js')
+  script(type='text/javascript' src='/javascripts/getAllMessages.js')
   script(type='text/javascript' src='/javascripts/socket.io-client/dist/socket.io.js')
+  script(type='text/javascript' src='/javascripts/sendMessage.js')
   link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous")
   link(rel='stylesheet', href='/stylesheets/style.css')
   link(href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css')
@@ -16,6 +18,9 @@ html
      li(class='menubar') 
       a(href='/search')
        i(class='fa fa-eye')
+     li(class='menubar')
+      a(href='/messages/myMessages')
+       i(class='fas fa-envelope')
      li(class='menubar') 
       a(href='/secure')
        i(class='fa fa-home')
