--- a/views/search.pug
+++ b/views/search.pug
@@ -5,7 +5,7 @@ block content
  div(class="infoside")
   p(id='username') #{name}
   p(id='account') Account: #{account} 
-   a(href='http://localhost:5001/creditCard')
+   a(href='/creditCard')
     i(class="fas fa-credit-card")
   p(id='balance') Balance: #{balance}
   button(type='button' class='indexbtn' onclick="location.href='/ads/myAd'") MY AD
@@ -23,6 +23,9 @@ block content
    button(id='searchButt' onclick='Search()')
     i(class='fab fa-sistrix')
    input(type="text" id='searchInput' name="search" onfocus="this.placeholder= ''" onblur="this.placeholder= 'Search...'" placeholder="Search..." autocomplete='off')
+   select(id='searchSelect')
+    option(value = 'users') users
+    option(value='ads') ads
   div(id='divWithData' class='midPageForms')
    - var i=0
     while i < 5
