--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,7 +7,8 @@ body {
 	background-image: url('/images/background.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
-	background-position: center;	
+	background-position: center;
+	height: 100%;	
 }
 hr{
 	height: 15px;
@@ -133,8 +134,19 @@ div.midpage{
 
 }
 
-header, footer {
+header {
     padding: 1em;
+    color: black;
+    clear: left;
+	text-align: center;
+	display: block;
+}
+footer {
+	position: fixed;
+   bottom:0;
+   width:100%;
+   height:60px;
+   padding: 1em;
     color: black;
     clear: left;
 	text-align: center;
@@ -227,6 +239,23 @@ p#pDescription{
 	vertical-align: middle;
 	
 }
-textarea:focus, input:focus{
+textarea:focus, input:focus, select:focus{
     outline: none;
+}
+div.indexMidpage{
+	text-align: center;
+}
+select {
+	background: none;
+	border: none;
+}
+select:hover{
+	cursor: pointer;
+}
+ul#ulMessages li{
+	border:1px solid;
+	border-color: rgba(0, 0, 0, 0.124);
+}
+i.messageTresh{
+	float: right;
 }
