--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,8 +3,10 @@ html
  head
   title GreenRabbit
   script(type='text/javascript' src='/javascripts/CloseMyAd.js')
-  script(type='text/javascript' src='/javascripts/searchAds.js')
+  script(type='text/javascript' src='/javascripts/search.js')
   script(type='text/javascript' src='/javascripts/getAllMessages.js')
+  script(type='text/javascript' src='/javascripts/DeleteMessage.js')
+  script(type='text/javascript' src='/javascripts/Purchase.js')
   script(type='text/javascript' src='/javascripts/socket.io-client/dist/socket.io.js')
   script(type='text/javascript' src='/javascripts/sendMessage.js')
   link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous")
