--- a/views/newAd.pug
+++ b/views/newAd.pug
@@ -4,11 +4,11 @@ block content
  div(class='midpage')
   h1 New Ad
   div(class='midPageForms')
-   form(method='post' autocomplete='off' action='/ads')
+   form(method='post' autocomplete='off' action='/ads' onload='newAdInput()')
     p
      label(for='ad') Name: 
      input(type='text', class='inputBox', name='name')
     p
      label(for='amount') Amout:
-     input(type='text', class='inputBox', name='amount')
+     input(type='text', class='inputBox', id='amountNewAd', name='amount')
     input(type='submit',value='Submit')
