--- a/views/index.pug
+++ b/views/index.pug
@@ -3,17 +3,16 @@ extends layout
 block content
  div(class='title')
   p #{title}
- div(class='indexMidpage')
-  form(method='post' autocomplete='off')
-   p
-    label(for='username') Username: 
-    input(type='text', name='username')
-   p
-    label(for='password') Password: 
-    input(type='password', name='password')
-   input(type='submit' value='LOGIN')
+ div(class='logreg')
+  p Username: 
+  input(type='text' id='username' autocomplete='off' name='username')
+  p Password: 
+  input(type='password' id='password' name='password')
+  br
+  button(type='button' class='indexbtn' onclick='Login()') Submit
+  p(id='errorP')
   br
   p Don't have an account?
-  button(type='button' class='indexbtn' onclick="location.href='/register'") REGISTER
+   button(type='button' class='indexbtn' onclick="location.href='/register'") REGISTER
   br
   br
