--- a/views/register.pug
+++ b/views/register.pug
@@ -3,19 +3,15 @@ extends layout
 block content
   div(class='midpage')
    h1 Registration
-   div(class='midPageForms')
-    form(method='POST' autocomplete='off' class='paintForm')
-      div.form-group
-       p
-        label Username: 
-         input(type='text' required name='username')
-       p
-        label Password: 
-         input(type='password' required name='password')
-       p
-        label Number: 
-         input(type='number' required name='number')
-       p
-        label PIN: 
-         input(type='pin' required name='pin')
-       button(type='submit' class='indexbtn') Register
+   div(class='logreg')
+    p Username
+    input(type='text' required autocomplete='off' id='username' name='username')
+    p Password
+    input(type='password' required id='password' name='password')
+    p Card number
+    input(type='text' required id='number' name='number')
+    p PIN
+    input(type='text' required id='pin' name='pin')
+    br
+    button(type='button' onclick='Register()' class='indexbtn') Register
+    p(id='errorP')
