--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -191,13 +191,14 @@ textarea#messageText {
 	border-bottom: 1px solid;
 }
 div#bgimage {
+	flex: 100%;
 	width: 100%;
 	height: 100%;
 	position: absolute;
 	background-image: url('/images/background.jpg');
     background-position: center center;
     background-repeat: no-repeat;
-	background-size: cover;
+	background-size: contain;
 	opacity: 0.7;
 	z-index: -1;
 }
