--- a/views/layout.pug
+++ b/views/layout.pug
@@ -26,12 +26,12 @@ html
      li(class='menubar' value= '#{messages}')
       span
        a(href='/messages/myMessages')
-        if messages.length == 0
+        if messages == 0
          i(class='fas fa-envelope-open')
         else
          i(class='fas fa-envelope')
          div(id='numberOfMessages')
-          strong #{messages.length}
+          strong #{messages}
      li(class='menubar') 
       a(href='/secure')
        i(class='fa fa-home')
